# ProjCpp

./: .gitignore  CMakeLists.txt  main.cpp  makefile  misc.cpp  readme.md
src/: misc.h
